# Storikom

./: .gitIgnore  README.md  demo.md  idea.md  main.py  procfile  pyproject.toml  requirements.txt  workflow.md
api/: main.py
api/routes/: character.py  chat.py  chroma_db.py  embed.py  pdf_extract.py  pdf_extracter.py  pov.py
api/tests/: test2.py  test_pipeline1.py
api/utils/: character_extractor.py  chatbot.py  pov_rewriter.py
static/: script.js  story.css  story.js  style.css
templates/: index.html  story.html
